--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h1 {
+        @apply text-3xl font-bold
+    }
+
+    h2 {
+        @apply text-2xl font-bold
+    }
+
+    h3 {
+        @apply text-xl font-bold
+    }
+
+    h4 {
+        @apply text-lg font-bold
+    }
+
+    h5 {
+        @apply text-base font-bold
+    }
+
+    h6 {
+        @apply text-sm font-bold
+    }
+
+
+}
